<resources>
    <string name="app_name">Caesar Cipher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_a_message">Write a message</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="encrypt">ENCRYPT</string>
    <string name="decrypt">DECRYPT</string>
</resources>