<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartFragment">

    <data>
        <variable
            name="viewModel"
            type="com.nalepa.project_nr1.viewmodel.EncryptionViewModel" />

        <variable
            name="startFragment"
            type="com.nalepa.project_nr1.StartFragment" />
    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/inputMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/write_a_message"
                android:autofillHints="name"
                android:gravity="center"
                android:textSize="30sp"
                android:onTextChanged="@{() -> startFragment.setInput()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/outputMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@{viewModel.outputMessage}"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/curOffset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputMessage" />

            <Button
                android:id="@+id/btnDecrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:onClick="@{() -> viewModel.decreaseOffset()}"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/decrease"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/curOffset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.offset.toString()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnIncrease"
                app:layout_constraintStart_toEndOf="@+id/btnDecrease"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnIncrease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{() -> viewModel.increaseOffset()}"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/increase"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ToggleButton
                android:id="@+id/toggleIsEncryptionEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{() -> startFragment.setToggleButton()}"
                android:textOff="@string/decrypt"
                android:textOn="@string/encrypt"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDecrease">


            </ToggleButton>




        </androidx.constraintlayout.widget.ConstraintLayout>


</layout>